--- a/diabetes.ipynb
+++ b/diabetes.ipynb
@@ -76,7 +76,7 @@
     {
       "cell_type": "code",
       "source": [
-        "diabetes_data = pd.read_csv(\"/content/drive/My Drive/diabetes/diabetes.csv\")"
+        "diabetes_data = pd.read_csv(\"/content/drive/My Drive/path/to/diabetes.csv\")"
       ],
       "metadata": {
         "id": "12yqssCBhdiM"
